# electron-screen-split

./: .gitignore  index.js  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
.github/scripts/: linux-smoke.sh
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-22-tauri-rewrite.md  2026-07-23-drag-preview-size.md  2026-07-23-drag-stability.md  2026-07-23-login-extension-production-logging.md  2026-07-23-login-extension-test-mode.md  2026-07-23-login-extension.md  2026-07-23-remove-esc-overlay.md  2026-07-24-electron-tauri-parity.md  2026-07-24-windows-card-drag.md  2026-07-24-zoom-range.md
src/: overlay-preload.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: manager.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: login-extension.js
src-tauri/src/: app_state.rs  audio.rs  commands.rs  config_store.rs  layout.rs  lib.rs  login_extension.rs  main.rs  model.rs  platform.rs  wall.rs
src/main/: config-store.js  index.js  layout.js  login-extension.js  wall-controller.js
src/renderer/: api.test.ts  api.ts  app.js  app.ts  blank.html  esc-overlay-removal.test.ts  index.html  login-extension.test.ts  overlay.css  overlay.html  overlay.js  overlay.test.ts  overlay.ts  render-gate.test.ts  render-gate.ts  state.test.ts  state.ts  styles.css  tauri-config.test.ts  types.ts  view.test.ts  view.ts  wall.html
test/: config-store.test.js  electron-ui-smoke.js  electron-wall-smoke.js  layout.test.js  login-extension.test.js
(+10 files in other folders)
