[package]
name = "screen-wall-control"
version = "2.0.0"
description = "Tauri-based 2x2 web wall controller"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "screen_wall_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atomic-write-file = "=0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = ["unstable"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
